2001-04-05  Ivo Hofacker  <ivo@tbi.univie.ac.at>

	* added PS_rna_plot_a to produce structure plots with annotation
	
