@@ -8,8 +8,8 @@ if MAKE_CLUSTER
   CLDIR = Cluster
 endif
 
-SUBDIRS = lib Progs man Subopt Utils AliFold H $(PLDIR) $(CLDIR)
-DIST_SUBDIRS = lib Progs man Subopt Utils AliFold H Perl Cluster
+SUBDIRS = lib Progs man Utils AliFold H $(PLDIR) $(CLDIR)
+DIST_SUBDIRS = lib Progs man Utils AliFold H Perl Cluster
 
 pkgdata_DATA = vienna13.par default.par
 
