@@ -1,4 +1,5 @@
-bin_PROGRAMS = RNAfold RNAeval RNAheat RNApdist RNAdistance RNAinverse RNAplot
+bin_PROGRAMS = RNAfold RNAeval RNAheat RNApdist RNAdistance RNAinverse \
+		RNAplot RNAsubopt
 
 LDADD = -L../lib -lRNA -lm
 
