@@ -2,8 +2,8 @@ lib_LIBRARIES = libRNA.a
 
 libRNA_a_SOURCES = dist_vars.c fold_vars.c part_func.c read_epars.c\
 	treedist.c energy_par.c inverse.c ProfileDist.c RNAstruct.c utils.c\
-	fold.c naview.c PS_dot.c stringdist.c params.c
+	fold.c naview.c PS_dot.c stringdist.c params.c subopt.c list.c
 
-noinst_HEADERS = intloops.h
+noinst_HEADERS = intloops.h list.h
 
 INCLUDES = -I../H
